fixes text wrap of new lines on card text

--- a/src/static/css/global.css
+++ b/src/static/css/global.css
@@ -63,6 +63,10 @@ summary {
   cursor: pointer;
 }
 
+.wrap-new-lines {
+  white-space: pre-wrap;
+}
+
 .close-button {
   cursor: pointer;
   float: right;
